# vizard

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
